# memq

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: pr_build.yaml  pr_validation.yaml  publish_to_maven_central.yaml
deploy/: common.sh  consumer.properties  pom.xml  run.sh  server.properties  startlocalkafka.sh  stoplocalkafka.sh
deploy/configs/: clustered.yaml  nonclustered.yaml
docs/: architecture.md  brokerconfig.md  deploy.md  gettingstarted.md  opensource.md
memq/: README.md  pom.xml
memq-client/: pom.xml
memq-client-all/: pom.xml
memq-commons/: pom.xml
memq-examples/: pom.xml
memq-python-client/: README.md  requirements.txt  run_tests.sh  setup.py  tox.ini
memq-python-client/src/memq/: example_batch_consumer.py  inputstream.py  kafkanotificationsource.py  memqbatchconsumer.py  memqconsumer.py  memqlogmessageiterator.py
memq-python-client/tests/: testmemqlogmessageiterator.py
memq-rust-client/: .gitignore  Cargo.toml  run-e2e.sh
memq-rust-client/examples/: e2e_broker.rs
memq-rust-client/src/: batch_header.rs  compression.rs  consumer.rs  deserializer.rs  error.rs  kafka.rs  lib.rs  message.rs  message_header.rs  notification.rs  storage.rs
memq-rust-client/tests/: batch_parsing.rs  consumer_tests.rs  deserializer_tests.rs  docker-compose.yml  docker_kafka.rs  e2e_broker_tests.rs  integration_tests.rs  kafka_notification_tests.rs
memq/arc/: S3Async2OutputHandler.java  S3AsyncOutputHandler.java  S3FileAsync2OutputHandler.java  S3OutputHandler.java
memq/arc/bucketing/: Batch.java  BatchOutputTask.java  (+2 more)
(+287 files in other folders)
